[VK] Change tray bubbles to anchor on virtual keyboard if it's shown.

In a previous patch [1], we changed the anchor insets for tray bubbles
so that when the keyboard is shown, bubbles show above the keyboard.

However, this causes a subtle bug with the accessibility virtual
keyboard. When we open the accessibility VK, the status area / shelf
moves downwards. We then show a bubble, which is positioned correctly
relative to the VK due to [1]. However, when we hide the VK, the status
area / shelf moves upwards. Because the bubble is anchored to the status
area / shelf and still has the same insets, it will move up as well.

To fix this, we change the bubble anchor bounds to return either the
status area bounds or the virtual keyboard bounds depending on whether
the keyboard is visible.

[1] https://crrev.com/a9f7dfd46a7774586f3f3b6b72c6e60842f71a9b [formerly 3e3220d49f21fc41dcc51e21c3680d7853fb3d38]

Bug: 871718
Change-Id: I8f24e2ff26f8912f579c386755de8af512c6ed1d
Reviewed-on: https://chromium-review.googlesource.com/1166766
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581786}
Former-commit-id: dd1d1381bbdaa381eba7613abdb1ad0635f34d86