ash/system/tray/tray_background_view.cc
@@ -476,14 +476,8 @@ gfx::Insets TrayBackgroundView::GetBubbleAnchorInsets() const {
   gfx::Insets anchor_insets = GetBubbleAnchor()->GetInsets();
   gfx::Insets tray_bg_insets = GetInsets();
   if (GetAnchorAlignment() == TrayBubbleView::ANCHOR_ALIGNMENT_BOTTOM) {
-    // TODO(blakeo): There are minor variances in padding depending on if the
-    // keyboard is in anchored accessibility mode or in regular mode.
-    const gfx::Rect keyboard_occluding_bounds =
-        shelf_->shelf_layout_manager()->keyboard_occluded_bounds();
-    int keyboard_offset = keyboard_occluding_bounds.height();
-    return gfx::Insets(-tray_bg_insets.top() - keyboard_offset,
-                       anchor_insets.left(), -tray_bg_insets.bottom(),
-                       anchor_insets.right());
+    return gfx::Insets(-tray_bg_insets.top(), anchor_insets.left(),
+                       -tray_bg_insets.bottom(), anchor_insets.right());
   } else {
     return gfx::Insets(anchor_insets.top(), -tray_bg_insets.left(),
                        anchor_insets.bottom(), -tray_bg_insets.right());
